--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+*/node_modules
+*/.serverless
+*/.vscode
+*bin
+*.pyc
+*.pyo
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -16,6 +20,3 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-
-# Go workspace file
-go.work
